--- a/src/html/base.html
+++ b/src/html/base.html
@@ -1,4 +1,11 @@
-{{>videoCard}}
-{{>photoCard}}
-{{>quoteCard}}
-{{>paragraphCard}}
+<div id="blocks-wrapper">
+	<div id="inner-wrapper">
+		{{>paragraphCard size="s" margin="1"}}
+		{{>photoCard size="l" margin="0"}}
+		{{>quoteCard size="s" margin="2"}}
+		{{>videoCard size="s" margin="0"}}
+		{{>quoteCard size="m" margin="1"}}
+	</div>
+</div>
+
+
