--- a/src/html/cards/card-video.html
+++ b/src/html/cards/card-video.html
@@ -1,10 +1,10 @@
-<div class="card card-video">
+<div class="card card-video size-{{size}} margin-{{margin}}-col">
 	<div class="video-container">
 		<video></video>
 	</div>
 	<div class="photo-placeholder-container">
 		<div class="placeholder-background">
-			<!-- <img src="poep" /> -->
+			<img src="http://31.media.tumblr.com/660412bc8ec32b5f3ed33a38e35b02ee/tumblr_mixwb2O8Vt1r4zr2vo2_r2_500.gif" />
 		</div>
 		<div class="placeholder-content">
 			<button class="video-btn"></button>
