paragraph different styling on different sizes

--- a/src/html/base.html
+++ b/src/html/base.html
@@ -1,10 +1,14 @@
 <div id="blocks-wrapper">
 	<div id="inner-wrapper">
-		{{>paragraphCard size="s" margin="1"}}
-		{{>photoCard size="l" margin="0"}}
+		{{>paragraphCard size="xs" margin="0"}}
+		{{>paragraphCard size="s" margin="0"}}
+		{{>paragraphCard size="m" margin="0"}}
+		{{>paragraphCard size="l" margin="0"}}
+		{{>paragraphCard size="xl" margin="0"}}
+		<!-- {{>photoCard size="l" margin="0"}}
 		{{>quoteCard size="s" margin="2"}}
 		{{>videoCard size="s" margin="0"}}
-		{{>quoteCard size="m" margin="1"}}
+		{{>quoteCard size="m" margin="1"}} -->
 	</div>
 </div>
 
