all cards in grid

--- a/src/html/base.html
+++ b/src/html/base.html
@@ -1,10 +1,29 @@
 <div id="blocks-wrapper">
 	<div id="inner-wrapper">
+		{{>videoCard size="xs" margin="0"}}
+		{{>videoCard size="s" margin="0"}}
+		{{>videoCard size="m" margin="0"}}
+		{{>videoCard size="l" margin="0"}}
+		{{>videoCard size="xl" margin="0"}}
+
+		{{>quoteCard size="xs" margin="0"}}
+		{{>quoteCard size="s" margin="0"}}
+		{{>quoteCard size="m" margin="0"}}
+		{{>quoteCard size="l" margin="0"}}
+		{{>quoteCard size="xl" margin="0"}}
+
 		{{>paragraphCard size="xs" margin="0"}}
 		{{>paragraphCard size="s" margin="0"}}
 		{{>paragraphCard size="m" margin="0"}}
 		{{>paragraphCard size="l" margin="0"}}
 		{{>paragraphCard size="xl" margin="0"}}
+
+		{{>photoCard size="xs" margin="0"}}
+		{{>photoCard size="s" margin="0"}}
+		{{>photoCard size="m" margin="0"}}
+		{{>photoCard size="l" margin="0"}}
+		{{>photoCard size="xl" margin="0"}}
+
 		<!-- {{>photoCard size="l" margin="0"}}
 		{{>quoteCard size="s" margin="2"}}
 		{{>videoCard size="s" margin="0"}}
