mobile cards working/loading from doc

--- a/src/html/base.html
+++ b/src/html/base.html
@@ -1,4 +1,5 @@
-{{>videoCard}}
-{{>photoCard}}
-{{>quoteCard}}
-{{>paragraphCard}}
+{{#if isMobile}}
+	{{>layoutMobile}}
+{{else}}
+	{{>layoutDesktop}}
+{{/if}}
