--- a/src/html/layout-mobile.html
+++ b/src/html/layout-mobile.html
@@ -1,1 +1,18 @@
-layout_mobile.html
+{{#stories}}
+
+    <div class="swiper-container swiper-container-h">
+        <div class="swiper-wrapper">
+            {{#cards}}
+
+            	{{>card}}
+
+            {{/cards}}
+        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+        <!-- Add Arrows -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+    </div>
+
+{{/stories}}
