--- a/src/html/base.html
+++ b/src/html/base.html
@@ -6,7 +6,7 @@
 		{{>videoCard size="l" margin="0"}}
 		{{>videoCard size="xl" margin="0"}}
 
-		{{>quoteCard size="xs" margin="0"}}
+		<!-- {{>quoteCard size="xs" margin="0"}}
 		{{>quoteCard size="s" margin="0"}}
 		{{>quoteCard size="m" margin="0"}}
 		{{>quoteCard size="l" margin="0"}}
@@ -22,7 +22,7 @@
 		{{>photoCard size="s" margin="0"}}
 		{{>photoCard size="m" margin="0"}}
 		{{>photoCard size="l" margin="0"}}
-		{{>photoCard size="xl" margin="0"}}
+		{{>photoCard size="xl" margin="0"}} -->
 
 		<!-- {{>photoCard size="l" margin="0"}}
 		{{>quoteCard size="s" margin="2"}}
