--- a/src/html/cards/card-video.html
+++ b/src/html/cards/card-video.html
@@ -3,12 +3,16 @@
 		<video></video>
 	</div>
 	<div class="photo-placeholder-container">
-		<div class="placeholder-background">
-			<img src="http://31.media.tumblr.com/660412bc8ec32b5f3ed33a38e35b02ee/tumblr_mixwb2O8Vt1r4zr2vo2_r2_500.gif" />
-		</div>
+		<div class="placeholder-background"></div>
 		<div class="placeholder-content">
-			<button class="video-btn"></button>
-			<p><strong>Watch</strong> How did they manage to build 3 dams in a year?</p>
+			<div class="placeholder-mobile">
+				<button class="video-btn"></button>
+				<p><strong>Watch</strong> How did they manage to build 3 dams in a year?</p>
+			</div>
+
+			<div class="placeholder-desktop">
+				<p><strong>Watch</strong> Replay with sound</p>
+			</div>
 		</div>
 	</div>
 </div>
