sizes and margins are now working

--- a/src/html/cards/card-quote.html
+++ b/src/html/cards/card-quote.html
@@ -1,4 +1,4 @@
-<div class="card card-quote size-{{size}} margin-{{margin}}-col">
+<div class="card card-quote">
 	<div class="quote-container">
 		<img class="quote-icon" src="imgs/quoteMark.svg" />
 		<quote>Large connected areas of core forest have declined from <strong>over 70% in 1973</strong> to 20% in 2009</quote>
