--- a/src/html/cards/card-slide.html
+++ b/src/html/cards/card-slide.html
@@ -1,4 +1,3 @@
- 
-<div class="swiper-slide swiper-slide-pending" data-card-id="{{this}}">
+ <div class="swiper-slide swiper-slide-pending size-{{get_card_size this}} margin-{{get_card_margin this}}-col" data-card-id="{{this}}">
 
 </div>
