--- a/src/html/cards/card-video.html
+++ b/src/html/cards/card-video.html
@@ -1,4 +1,4 @@
-<div class="card card-video size-{{size}} margin-{{margin}}-col">
+<div class="card card-video">
 	<div class="video-container">
 		<video width="100%" height="auto" autoplay muted loop>
 		  <source src="imgs/testvideo.mp4" type="video/mp4" >
