starting asset manager

--- a/src/html/cards/card-video.html
+++ b/src/html/cards/card-video.html
@@ -1,6 +1,6 @@
 <div class="card card-video">
 	<div class="video-container">
-		<video width="100%" height="auto" autoplay muted loop>
+		<video width="100%" height="auto" {{#isMobile}}muted{{/isMobile}}>
 		  <source src="imgs/testvideo.mp4" type="video/mp4" >
 		</video>
 	</div>
