pagination on mobba

--- a/src/html/cards/card-audio.html
+++ b/src/html/cards/card-audio.html
@@ -1,4 +1,4 @@
-<div class="card card-audio" style="background-image:url(imgs/content/{{background}}.png)">
+<div class="card card-audio" style="background-image:url(https://interactive.guim.co.uk/2015/11/mekong-assets/images/{{background}}.png)">
 	<div class="audio-container media-container">
 		<audio></audio>
 		<div class="audio-button-container">
@@ -7,7 +7,7 @@
 			<div class="button-background"></div>
 		</div>
 		<div class="audio-info-container">
-		<p><strong>Listen to</strong> {{caption}}</p>
+		<p>{{caption}}</p>
 		</div>
 	</div>
 </div>
