--- a/src/html/layout-mobile.html
+++ b/src/html/layout-mobile.html
@@ -9,7 +9,13 @@
             {{/cards}}
         </div>
         <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
+        <div class="swiper-pagination-container">
+            <div class="swiper-pagination-controls">
+                <p>Chapter 1: Dams</p>
+                <button class="swiper-button-next"></button>
+            </div>
+            <div class="swiper-pagination"> </div>
+        </div>
         <!-- Add Arrows -->
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
