--- a/src/html/cards/card-video.html
+++ b/src/html/cards/card-video.html
@@ -1,6 +1,6 @@
 <div class="card card-video">
 	<div class="video-container media-container">
-		<video {{#isMobile}}muted{{/isMobile}}>
+		<video {{#if_eq isMobile false }}muted{{/if_eq}}>
 		  
 		</video>
 	</div>
