quote data coming from spreadsheet

--- a/src/html/cards/card-quote.html
+++ b/src/html/cards/card-quote.html
@@ -1,9 +1,9 @@
 <div class="card card-quote">
 	<div class="quote-container">
-		<img class="quote-icon" src="imgs/quoteMark.svg" />
-		<quote>Large connected areas of core forest have declined from <strong>over 70% in 1973</strong> to 20% in 2009</quote>
+		<img class="quote-icon" src="/imgs/quoteMark.svg" />
+		<quote>{{{quote}}}</quote>
 		<div class="quote-credit">
-			<p><strong>Peter Cutter</strong> landscape conversation manager</p>
+			<p><strong>{{{credit_name}}}</strong> {{{credit_title}}}</p>
 		</div>
 	</div>
 </div>
