--- a/src/html/cards/card-paragraph.html
+++ b/src/html/cards/card-paragraph.html
@@ -1,6 +1,6 @@
 <div class="card card-paragraph">
 	<div class="paragraph-container">
-		<h3>Some countries have lost nearly all</h3>
-		<p>Five Asian countries have lost nearly one-third of their forests in the last 35 years and could be left with little more than 10%. Five Asian countries have lost nearly one-third of their forests in the last 35 years and could be left with little more than 10%.</p>
+		{{#if headline}}<h3>{{{headline}}}</h3>{{/if}}
+		<p>{{{copy}}}</p>
 	</div>
 </div>
