--- a/src/html/cards/card-audio.html
+++ b/src/html/cards/card-audio.html
@@ -1,4 +1,4 @@
-<div class="card card-audio" style="background-image:url(https://interactive.guim.co.uk/2015/11/mekong-assets/images/{{background}}.png)">
+<div class="card card-audio" style="background-image:url(https://interactive.guim.co.uk/2015/11/mekong-assets/images/{{background}}.jpg)">
 	<div class="audio-container media-container">
 		<audio></audio>
 		<div class="audio-button-container">
