story and chapter starts

--- a/src/html/cards/card-base.html
+++ b/src/html/cards/card-base.html
@@ -1,5 +1,4 @@
- <div class="swiper-slide {{get_pending_status card isMobile}} size-{{size}} margin-{{margin}}-col" data-card-id="{{card}}_{{id}}">
-
+ <div class="swiper-slide {{get_pending_status card isMobile}} size-{{size}} margin-{{margin}}-col slide-{{card}}" data-card-id="{{card}}_{{id}}">
  	{{#if_eq card "photo"}}
 		{{> photoCard }}
 	{{else if_eq card "quote"}}
@@ -10,10 +9,9 @@
 		{{> paragraphCard }}
 	{{else if_eq card "audio"}}
 		{{> audioCard }}
+	{{else if_eq card "title"}}
+		{{> titleCard }}
 	{{/if_eq}}
-
-
-
 </div>
 
 
