--- a/src/html/layout-desktop.html
+++ b/src/html/layout-desktop.html
@@ -7,7 +7,7 @@
 		</div>
 		<div class="header-inner">
 			<h1>The tale <span id="title-break-1">of a</span> <span id="title-break-2">river</span></h1>
-			<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h2>
+			<h2>Ahead of the UN Climate Conference in Paris, John Vidal travels along one of the world's greatest rivers, through Laos, Vietnam and Cambodia, to see why climate change on top of breakneck industrial development could be enough to push the region over the ecological edge.</h2>
 		</div>
 	</div>
 
