--- a/src/html/cards/card-title.html
+++ b/src/html/cards/card-title.html
@@ -1,10 +1,13 @@
 <div class="drone-stroke">
 	<video autoplay loop muted style="margin-top:-{{offset}}px"></video>
 </div>
-
-<div class="title-locator"></div>
-<div class="title-heading">
-	<p><strong>Part {{number}}</strong> out of 8</p>
-	<h2>{{name}}</h2>
-	<h3>{{standfirst}}</h3>
+<div class="title-heading-container">
+	<div class="title-locator">
+		<img src="/imgs/content/chapter-locator-1.png" />
+	</div>
+	<div class="title-heading">
+		<p><strong>Chapter {{number}}</strong> out of 8</p>
+		<h2>{{name}}</h2>
+		<h3>{{standfirst}}</h3>
+	</div>
 </div>
