styling mobile title cards, fix mobile video

--- a/src/html/cards/card-title.html
+++ b/src/html/cards/card-title.html
@@ -1,6 +1,7 @@
 <div class="drone-stroke">
-	<video autoplay loop muted style="margin-top:-{{offset}}px"></video>
+	<video {{#if_eq isMobile false}}autoplay loop muted{{/if_eq}} style="margin-top:-{{offset}}px"></video>
 </div>
+
 <div class="title-heading-container">
 	<div class="title-locator">
 		<img src="/imgs/content/chapter-locator-1.png" />
