--- a/boot/index.html
+++ b/boot/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
         <title>Guardian visuals</title>
         
         <style>
