--- a/src/html/layout-desktop.html
+++ b/src/html/layout-desktop.html
@@ -6,8 +6,8 @@
 			<img src="/imgs/river-mask.png" />
 		</div>
 		<div class="header-inner">
-			<h1>The tale <span id="title-break-1">of a</span> <span id="title-break-2">river</span></h1>
-			<h2>Ahead of the UN Climate Conference in Paris, John Vidal travels along one of the world's greatest rivers, through Laos, Vietnam and Cambodia, to see why climate change on top of breakneck industrial development could be enough to push the region over the ecological edge.</h2>
+			<h1>Tales <span id="title-break-1">of the</span> <span id="title-break-2">river bank</span></h1>
+			<h2>The fate of 70m people rests on what happens to the Mekong river. Ahead of the Paris climate change summit, John Vidal finds countries calling for clean energy but creating ecological and human havoc with giant dams, deforestation and fast-growing cities</h2>
 		</div>
 	</div>
 
