video mobile fix

--- a/src/html/cards/card-photo.html
+++ b/src/html/cards/card-photo.html
@@ -1,5 +1,5 @@
 <div class="card card-photo">
-	<div class="photo-bg-container">
+	<div class="photo-bg-container" style="background-image:url({{photo_url}})">
 		<img class="photo-bg" src="{{photo_url}}" />
 	</div>
 	<div class="photo-caption-container">
