--- a/src/html/cards/card-photo.html
+++ b/src/html/cards/card-photo.html
@@ -1,6 +1,6 @@
 <div class="card card-photo">
-	<div class="photo-bg-container" style="background-image:url({{photo_url}})">
-		<img class="photo-bg" src="{{photo_url}}" />
+	<div class="photo-bg-container">
+		<img class="photo-bg" src="data:image/svg+xml;charset=utf-8,%3Csvg xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' viewBox%3D'0 0 200 150'%2F%3E" /> 
 	</div>
 	<div class="photo-caption-container">
 		<div class="photo-caption">
