--- a/src/html/layout-desktop.html
+++ b/src/html/layout-desktop.html
@@ -3,7 +3,7 @@
 
 	<div id="header-wrapper">
 		<div class="header-image-container">
-			<img src="/imgs/river-mask.png" />
+			<img src="/imgs/mekong.png" />
 		</div>
 		<div class="header-inner">
 			<h1>Tales <span id="title-break-1">of the</span> river <span id="title-break-2">bank</span></h1>
