--- a/src/html/layout-mobile.html
+++ b/src/html/layout-mobile.html
@@ -8,7 +8,7 @@
             <p>The fate of 70m people rests on what happens to the Mekong river. Ahead of the Paris climate change summit, John Vidal finds countries calling for clean energy but creating ecological and human havoc with giant dams, deforestation and fast-growing cities</p>
         </div>
 
-        <div class='gv-start-button'>Begin your journey</div>
+        <div class='gv-start-button'>Begin <span></span></div>
     </div>
 
 </div>
