mobile river image text card change

--- a/src/html/cards/card-paragraph.html
+++ b/src/html/cards/card-paragraph.html
@@ -1,4 +1,4 @@
-<div class="card card-paragraph" style="background-color:{{background}}; color:{{textcolor}}">
+<div class="card card-paragraph" style="color:{{textcolor}}">
 	<div class="paragraph-container">
 		{{#if headline}}<h3>{{{headline}}}</h3>{{/if}}
 		<p>{{{copy}}}</p>
