adds mobile transition cards

--- a/src/html/layout-desktop.html
+++ b/src/html/layout-desktop.html
@@ -14,7 +14,7 @@
 	{{#stories}}
 		<div class="slides-chapter slides-chapter-{{@index}}" data-chapter-color="{{background}}">
 			{{#each cards}}
-				{{>card}}
+				{{>cardDesktop}}
 		    {{/each}}
 		</div>
 	{{/stories}}
