--- a/src/html/cards/card-title.html
+++ b/src/html/cards/card-title.html
@@ -10,5 +10,9 @@
 		<p><strong>Chapter {{number}}</strong> out of 8</p>
 		<h2>{{name}}</h2>
 		<h3>{{standfirst}}</h3>
+
+		{{#if_true isMobile }}
+			<p><b>Swipe down</b> to continue</p>
+		{{/if_true}}
 	</div>
 </div>
