adds down button for mobile

--- a/src/html/cards/card-title.html
+++ b/src/html/cards/card-title.html
@@ -13,6 +13,10 @@
 
 		{{#if_true isMobile }}
 			<p><b>Swipe down</b> to continue</p>
+			
+			<div class='swiper-pagination-controls'>
+		    	<button class="swiper-button-down"></button>
+		    </div>
 		{{/if_true}}
 	</div>
 </div>
