--- a/src/html/layout-mobile.html
+++ b/src/html/layout-mobile.html
@@ -50,12 +50,10 @@
                                 <div class="swiper-pagination-controls">
                                     <p>Chapter 1: Dams</p>
                                     <button class="swiper-button-next"></button>
+                                    <button class="swiper-button-down swiper-down-disabled"></button>
                                 </div>
-                                <div class="swiper-pagination"> </div>
+                                <div class="swiper-pagination"></div>
                             </div>
-                            <!-- Add Arrows -->
-                            <div class="swiper-button-next"></div>
-                            <div class="swiper-button-prev"></div>
                         </div>
                     </div>
                 {{/stories}}
