adds chapter numbering and labeling from doc

--- a/src/html/layout-mobile.html
+++ b/src/html/layout-mobile.html
@@ -48,7 +48,7 @@
                             <!-- Add Pagination -->
                             <div class="swiper-pagination-container">
                                 <div class="swiper-pagination-controls">
-                                    <p>Chapter 1: Dams</p>
+                                    <p>Chapter {{chapter}}: {{nav_title}}</p>
                                     <button class="swiper-button-next"></button>
                                     <button class="swiper-button-down swiper-down-disabled"></button>
                                 </div>
