--- a/src/html/cards/card-transition.html
+++ b/src/html/cards/card-transition.html
@@ -1,4 +1,4 @@
-<div class="card card-paragraph" style="background-color:{{background}}; color:{{textcolor}}">
+<div class="card card-transition" style="background-color:{{background}}; color:{{textcolor}}">
 	<div class="paragraph-container">
 		
 		<p>{{{copy}}}</p>
