--- a/src/html/cards/card-base-desktop.html
+++ b/src/html/cards/card-base-desktop.html
@@ -12,6 +12,8 @@
 		{{> audioCard }}
 	{{else if_eq card "title"}}
 		{{> titleCard }}
+	{{else if_eq card "iframe"}}
+		{{> iframeCard }}
 	{{/if_eq}}
 </div>
 
