--- a/src/html/cards/card-base-mobile.html
+++ b/src/html/cards/card-base-mobile.html
@@ -14,6 +14,8 @@
 		{{> titleCard }}
 	{{else if_eq card "mobile"}}
 		{{> transitionCard }}
+	{{else if_eq card "iframe"}}
+		{{> iframeCard }}
 	{{/if_eq}}
 </div>
 
