restructures mobile rendering to make cards easier to navigation

--- a/src/html/cards/card-base-mobile.html
+++ b/src/html/cards/card-base-mobile.html
@@ -1,4 +1,4 @@
- <div class="gv-slide swiper-slide slide-position-{{@index}} slide-{{card}}" data-card-id="{{card}}_{{id}}">
+ <div class="gv-slide swiper-slide slide-{{card}}" data-card-id="{{card}}_{{id}}" style='background-color: {{chapterData.background}};'>
 
  	{{#if_eq card "photo"}}
 		{{> photoCard }}
