adds posters for mobile

--- a/src/html/cards/card-video.html
+++ b/src/html/cards/card-video.html
@@ -5,7 +5,7 @@
 		</video>
 	</div>
 	<div class="photo-placeholder-container">
-		<div class="placeholder-background" style="background-image:url({{poster_img}});"></div>
+		<div class="placeholder-background"></div>
 		<div class="placeholder-content">
 			<div class="placeholder-mobile">
 				<button class="play-btn"></button>
