adds share html

--- a/src/html/base.html
+++ b/src/html/base.html
@@ -7,6 +7,7 @@
 			        <div class="header-inner">
 			            <h1>{{{headline}}}</h1>
 			            <p>{{{standfirst}}}</p>
+			            {{>shareButtons}}
 			        </div>
 
 			        <div class='gv-start-button'>Begin <span></span></div>
@@ -27,7 +28,8 @@
 						</div>
 						<div class="header-inner">
 							<h1>{{{headline}}}</h1>
-							<h2>{{{standifrst}}}</h2>
+							<h2>{{{standfirst}}}</h2>
+							 {{>shareButtons}}
 						</div>
 					</div>
 
