minor changes in margins

--- a/src/html/base.html
+++ b/src/html/base.html
@@ -22,7 +22,7 @@
 			<div id="blocks-wrapper">
 				<div id="inner-wrapper">
 
-					<!-- <div id="header-wrapper">
+					<div id="header-wrapper">
 						<div class="header-image-container">
 							<img src="/imgs/mekong.png" />
 						</div>
@@ -31,7 +31,7 @@
 							<h2>{{{standfirst}}}</h2>
 							 {{>shareButtons}}
 						</div>
-					</div> -->
+					</div>
 
 					<div class='gv-card-container desktop-cards'></div>
 				</div>
