chapter drone videos height

--- a/src/html/cards/card-title.html
+++ b/src/html/cards/card-title.html
@@ -1,7 +1,7 @@
 <div class="drone-stroke">
 	<video {{#if_eq isMobile false}}autoplay loop muted{{/if_eq}} style="margin-top:-{{offset}}px"></video>
 	<div class="drone-title">
-		<p><strong>Chapter {{number}}</strong> out of 8</p>
+		<p><strong>Chapter {{number}}</strong> of 6</p>
 		<h2>{{name}}</h2>
 	</div>
 </div>
@@ -14,7 +14,7 @@
 		{{#if isMobile}}
 			{{>shareButtons}}
 		
-			<p><strong>Chapter {{number}}</strong> out of 8</p>
+			<p><strong>Chapter {{number}}</strong> of 6</p>
 			<h2>{{name}}</h2>
 		{{/if}}
 		<h3>{{standfirst}}</h3>
