--- a/src/html/cards/card-video.html
+++ b/src/html/cards/card-video.html
@@ -9,6 +9,7 @@
 		<div class="placeholder-content">
 			<div class="placeholder-mobile">
 				<button class="play-btn"></button>
+				<div class="button-background"></div>
 				<p class="video-caption">{{caption}}</p>
 			</div>
 
