--- a/src/html/layout-mobile.html
+++ b/src/html/layout-mobile.html
@@ -1,7 +1,7 @@
 <div class="swiper-container swiper-container-v">
         <div class="swiper-wrapper">
 
-            {{#stacks}}                     
+            {{#each stacks}}                     
 
                 <div class="swiper-slide">
                     <div class="swiper-container swiper-container-h">
@@ -19,11 +19,11 @@
                         <div class="swiper-pagination-container">
                             <div class="swiper-pagination-controls">
                                 
-                                {{#if_list_contains_one cards}}
+                                {{#if @first}}{{else}}
                                     <p>Chapter {{chapterData.chapter}}: {{chapterData.nav_title}}</p>
-                                {{/if_list_contains_one}}
+                                {{/if}}
                                 <button class="swiper-button-next"></button>
-                                <button class="swiper-button-down swiper-down-disabled"></button>
+                                <button class="swiper-button-down {{#if_list_more_than_one cards}}swiper-down-disabled{{/if_list_more_than_one}}"></button>
                             </div>
                             <div class="swiper-pagination"></div>
                         </div>
@@ -33,7 +33,7 @@
                 </div>
 
 
-            {{/stacks}}
+            {{/each}}
 
         </div>
     </div>
