--- a/src/html/layout-mobile.html
+++ b/src/html/layout-mobile.html
@@ -17,12 +17,7 @@
 
                         <!-- Add Pagination -->
                         <div class="swiper-pagination-container">
-                            <div class="swiper-pagination-controls">
-                                
-                                <button class="swiper-button-next"></button>
-                                <button class="swiper-button-down {{#if_list_more_than_one cards}}swiper-down-disabled{{/if_list_more_than_one}}"></button>
-                            </div>
-                            <div class="swiper-pagination"></div>
+                            <div class="swiper-pagination swiper-chapter-pagination"></div>
                         </div>
 
 
