--- a/src/html/base.html
+++ b/src/html/base.html
@@ -7,6 +7,7 @@
 			        <div class="header-inner">
 			            <h1>{{{headline}}}</h1>
 			            <p>{{{standfirst}}}</p>
+			            <div class='gv-header-journey-text'><b>Scroll</b><span class='gv-header-down'></span> to explore the Mekong region. <b>Go to the right</b><span class='gv-header-right'></span> at points to explore on your own.</div>
 			            {{>shareButtons}}
 			        </div>
 
