--- a/src/html/cards/card-paragraph.html
+++ b/src/html/cards/card-paragraph.html
@@ -1,6 +1,15 @@
 <div class="card card-paragraph" style="color:{{textcolor}}">
 	<div class="paragraph-container">
 		{{#if headline}}<h3>{{{headline}}}</h3>{{/if}}
-		<p>{{{copy}}}</p>
+		
+			{{#if isMobile}}
+				{{#if mobile_copy}}
+					<p>{{{mobile_copy}}}</p>
+				{{ else }}
+					<p>{{{copy}}}</p>
+				{{/if}}
+			{{else}}
+				<p>{{{copy}}}</p>
+			{{/if}}
 	</div>
 </div>
