--- a/src/html/cards/card-video.html
+++ b/src/html/cards/card-video.html
@@ -10,7 +10,7 @@
 			<div class="placeholder-mobile">
 				<button class="play-btn"></button>
 				<div class="button-background"></div>
-				<p class="video-caption">{{caption}}</p>
+				<p class="video-caption">{{{caption}}}</p>
 			</div>
 
 			<div class="placeholder-desktop">
