--- a/src/html/base.html
+++ b/src/html/base.html
@@ -1,23 +1,28 @@
 {{#if isMobile}}
-	
-			<div class='mobile-opener'>
+<div class='mobile-cards'>
+    <div class="swiper-container swiper-container-v">
+        <div class="swiper-wrapper">
+            	<div class="swiper-slide">
+					<div class='card card-opener' style='height:{{windowHeight}}px;'>
 
-			    <div id="header-wrapper">
+					    <div id="header-wrapper">
 
-			        <div class="header-inner">
-			            <h1>{{{headline}}}</h1>
-			            <p>{{{standfirst}}}</p>
-			            <div class='gv-header-journey-text'><b>Scroll</b><span class='gv-header-down'></span> to explore the Mekong region. <b>Go to the right</b><span class='gv-header-right'></span> at points to explore on your own.</div>
-			            {{>shareButtons}}
-			        </div>
+					        <div class="header-inner">
+					            <h1>{{{headline}}}</h1>
+					            <p>{{{standfirst}}}</p>
+					            <div class='gv-header-journey-text'><b>Scroll</b><span class='gv-header-down'></span> to explore the Mekong region. <b>Go to the right</b><span class='gv-header-right'></span> at points to explore on your own.</div>
+					            {{>shareButtons}}
+					        </div>
 
-			        <div class='gv-start-button'>Begin <span></span></div>
-			    </div>
+					        <div class='gv-start-button'>Begin <span></span></div>
+					    </div>
 
-			</div>
+					</div>
+				</div>
+        </div>
+    </div>
+</div>	
 
-			<div class='gv-card-container mobile-cards'></div>
-			<div class='gv-card-spacer'></div>
 
 {{else}}
 
