updates for mobile apps

--- a/src/html/base.html
+++ b/src/html/base.html
@@ -3,7 +3,7 @@
     <div class="swiper-container swiper-container-v">
         <div class="swiper-wrapper">
             	<div class="swiper-slide">
-					<div class='card card-opener' style='height:{{windowHeight}}px;'>
+					<div class='card card-opener'>
 
 					    <div id="header-wrapper">
 
