more mobile style updates

--- a/src/html/base.html
+++ b/src/html/base.html
@@ -1,5 +1,5 @@
 {{#if isMobile}}
-<div class='mobile-cards'>
+<div class='mobile-cards' style='height: {{windowHeight}}px;'>
     <div class="swiper-container swiper-container-v">
         <div class="swiper-wrapper">
             	<div class="swiper-slide">
