updates for mobile

--- a/src/html/base.html
+++ b/src/html/base.html
@@ -10,7 +10,7 @@
 					        <div class="header-inner">
 					            <h1>{{{headline}}}</h1>
 					            <p>{{{standfirst}}}</p>
-					            <div class='gv-header-journey-text'><b>Scroll</b><span class='gv-header-down'></span> to explore the Mekong region. <b>Go to the right</b><span class='gv-header-right'></span> at points to explore on your own.</div>
+					            <div class='gv-header-journey-text'><span class='gv-direction-down'></span><b>Scroll</b> to explore the Mekong region. <br><span class='gv-direction-right'></span><b>Go right</b> to find out more.</div>
 					            {{>shareButtons}}
 					        </div>
 
