mobile video fix

--- a/src/html/cards/card-base-mobile.html
+++ b/src/html/cards/card-base-mobile.html
@@ -22,7 +22,7 @@
 	{{#if transition}}
 	    <div class="swiper-pagination-container">
 	        <div class="swiper-pagination-controls">
-	        	<p>This way</p>
+	        	<p>{{transition_copy}}</p>
 	            {{#if_eq transition 'right'}}
 	            	<button class="swiper-button-next"></button>
 	            {{/if_eq}}
