new mute button

--- a/src/html/cards/card-video.html
+++ b/src/html/cards/card-video.html
@@ -17,7 +17,10 @@
 				<button class="play-btn"></button> 
 				<button class="unmute-btn"></button> 
 				<button class="pause-btn"></button>
-				<p class="video-time"></p>
+				<div class="video-time-container">
+					<p class="unmute-video">Continue with audio</p>
+					<p class="video-time"></p>
+				</div>
 			</div>
 		</div>
 	</div>
