--- a/src/html/cards/card-title.html
+++ b/src/html/cards/card-title.html
@@ -21,7 +21,15 @@
 			<p><strong>Chapter {{number}}</strong> of 6</p>
 			<h2>{{name}}</h2>
 		{{/if}}
-		<h3>{{standfirst}}</h3>
 
+		{{#if isMobile}}
+			{{#if standfirst_mobile}}
+				<h3>{{standfirst}}</h3>
+			{{ else }}
+				<h3>{{standfirst}}</h3>
+			{{/if}}
+		{{ else }}
+			<h3>{{standfirst}}</h3>
+		{{/if}}
 	</div>
 </div>
