--- a/src/html/cards/card-video.html
+++ b/src/html/cards/card-video.html
@@ -11,6 +11,7 @@
 				<button class="play-btn"></button>
 				<div class="button-background"></div>
 				<p class="video-caption">{{{caption}}}</p>
+				<p class="video-direction">{{{direction_text}}}</p>
 			</div>
 
 			<div class="placeholder-desktop">
