--- a/src/html/cards/card-quote.html
+++ b/src/html/cards/card-quote.html
@@ -1,6 +1,6 @@
-<div class="card card-quote">
+<div class="card card-quote" style="background:{{chapterData.background}}">
 	<div class="quote-container">
-		<!-- <img class="quote-icon" src="/imgs/quoteMark.svg" /> -->
+		<img class="quote-icon" src="/imgs/quoteMark.svg" />
 		<quote>{{{quote}}}</quote>
 
 		{{#if credit_name}}
