--- a/src/html/cards/card-photo.html
+++ b/src/html/cards/card-photo.html
@@ -2,11 +2,13 @@
 	<div class="photo-bg-container">
 		<img class="photo-bg" src="data:image/svg+xml;charset=utf-8,%3Csvg xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' viewBox%3D'0 0 200 150'%2F%3E" /> 
 	</div>
-	{{#if caption}}
-		<div class="photo-caption-container">
-			<div class="photo-caption">
-				<p>{{caption}}</p>
+	{{#if isMobile}}
+		{{#if caption}}
+			<div class="photo-caption-container">
+				<div class="photo-caption">
+					<p>{{caption}}</p>
+				</div>
 			</div>
-		</div>
+		{{/if}}
 	{{/if}}
 </div>
