disables autoplay flag

--- a/src/html/cards/card-title.html
+++ b/src/html/cards/card-title.html
@@ -1,5 +1,5 @@
 <div class="drone-stroke">
-	<video {{#if_eq isMobile false}}autoplay loop muted{{/if_eq}} style="margin-top:-{{offset}}px"></video>
+	<video {{#if_eq isMobile false}}loop muted{{/if_eq}} style="margin-top:-{{offset}}px"></video>
 	<div class="drone-title">
 		<p><strong>Chapter {{number}}</strong> of 6</p>
 		<h2>{{name}}</h2>
